DOC: automatically convert tutorials to doc pages

--- a/tutorials/Self_Consistency.ipynb
+++ b/tutorials/Self_Consistency.ipynb
@@ -2,34 +2,37 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e4f9198c",
+   "id": "b9c49297",
    "metadata": {},
    "source": [
-    "## Thermal density matrices\n",
+    "## Self-consistency computation\n",
     "\n",
-    "By passing a finite value for beta, you get a thermal density matrix.\n"
+    "This example demonstrates how to perform a self-consistent calculation. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c884d50",
+   "id": "5047f88e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import granad\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "import granad\n",
+    "import numpy as np\n",
+    "import diffrax\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# build stack\n",
     "sb = granad.StackBuilder()\n",
     "\n",
     "# add graphene\n",
     "graphene = granad.Lattice(\n",
-    "    shape=granad.Chain(10),\n",
+    "    shape=granad.Chain(16),\n",
     "    lattice_type=granad.LatticeType.CHAIN,\n",
     "    lattice_edge=granad.LatticeEdge.NONE,\n",
-    "    lattice_constant=1,\n",
+    "    lattice_constant=1.42,\n",
     ")\n",
     "sb.add(\"pz\", graphene)\n",
     "\n",
@@ -49,10 +52,12 @@
     "sb.set_coulomb(coulomb_graphene)\n",
     "\n",
     "# create the stack object\n",
-    "stack = sb.get_stack( beta = 0.1 )\n",
+    "stack = sb.get_stack( from_state = 0, to_state = 2, doping = 1 )\n",
     "\n",
-    "# thermal occupation factors\n",
-    "granad.show_energies( stack )"
+    "# get a stack object where the hamiltonian and density matrices are self-consistently evaluated\n",
+    "stack_new = granad.get_self_consistent( stack )\n",
+    "print( jnp.linalg.norm(stack.energies - stack_new.energies ) )\n",
+    "print( jnp.linalg.norm(stack.hamiltonian - stack_new.hamiltonian ) )"
    ]
   }
  ],
