--- a/tutorials/Thermal_DMs.ipynb
+++ b/tutorials/Thermal_DMs.ipynb
@@ -2,37 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e3e3665",
+   "id": "c53a1b1a",
    "metadata": {},
    "source": [
-    "## Self-consistency computation\n",
+    "## Thermal density matrices\n",
     "\n",
-    "This example demonstrates how to perform a self-consistent calculation. "
+    "By passing a finite value for beta, you get a thermal density matrix.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d033cfb",
+   "id": "e18074d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import granad\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "import numpy as np\n",
-    "import diffrax\n",
-    "import matplotlib.pyplot as plt\n",
+    "import granad\n",
     "\n",
     "# build stack\n",
     "sb = granad.StackBuilder()\n",
     "\n",
     "# add graphene\n",
     "graphene = granad.Lattice(\n",
-    "    shape=granad.Chain(16),\n",
+    "    shape=granad.Chain(10),\n",
     "    lattice_type=granad.LatticeType.CHAIN,\n",
     "    lattice_edge=granad.LatticeEdge.NONE,\n",
-    "    lattice_constant=1.42,\n",
+    "    lattice_constant=1,\n",
     ")\n",
     "sb.add(\"pz\", graphene)\n",
     "\n",
@@ -52,12 +49,10 @@
     "sb.set_coulomb(coulomb_graphene)\n",
     "\n",
     "# create the stack object\n",
-    "stack = sb.get_stack( from_state = 0, to_state = 2, doping = 1 )\n",
+    "stack = sb.get_stack( beta = 0.1 )\n",
     "\n",
-    "# get a stack object where the hamiltonian and density matrices are self-consistently evaluated\n",
-    "stack_new = granad.get_self_consistent( stack )\n",
-    "print( jnp.linalg.norm(stack.energies - stack_new.energies ) )\n",
-    "print( jnp.linalg.norm(stack.hamiltonian - stack_new.hamiltonian ) )"
+    "# thermal occupation factors\n",
+    "granad.show_energies( stack )"
    ]
   }
  ],
