FIX, DOC: missing files

--- a/docs/tutorials/getting_started.ipynb
+++ b/docs/tutorials/getting_started.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "43ed82e6",
+   "id": "8a73f4a0",
    "metadata": {},
    "source": [
     "## Getting started\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0485a11c",
+   "id": "e851d260",
    "metadata": {},
    "source": [
     "\n",
@@ -24,13 +24,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "86ff4eba",
+   "id": "13e4ce13",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T12:34:23.519495Z",
-     "iopub.status.busy": "2024-04-22T12:34:23.518939Z",
-     "iopub.status.idle": "2024-04-22T12:34:25.714541Z",
-     "shell.execute_reply": "2024-04-22T12:34:25.713819Z"
+     "iopub.execute_input": "2024-04-22T13:42:56.427935Z",
+     "iopub.status.busy": "2024-04-22T13:42:56.427322Z",
+     "iopub.status.idle": "2024-04-22T13:42:57.580323Z",
+     "shell.execute_reply": "2024-04-22T13:42:57.579674Z"
     }
    },
    "outputs": [
@@ -40,8 +40,7 @@
      "text": [
       "{'position': Array([0., 0., 0.], dtype=float64),\n",
       " 'layer_index': None,\n",
-      " 'tag': 'this is some information about my first orbital I might need to use '\n",
-      "        'later',\n",
+      " 'tag': 'a tag contains arbitrary information',\n",
       " 'energy_level': None,\n",
       " 'angular_momentum': None,\n",
       " 'angular_momentum_z': None,\n",
@@ -56,14 +55,14 @@
     "\n",
     "my_first_orbital = Orbital(\n",
     "    position = (0, 0, 0),\n",
-    "    tag = \"this is some information about my first orbital I might need to use later\",\n",
+    "    tag = \"a tag contains arbitrary information\",\n",
     ")\n",
     "print(my_first_orbital)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6c5160c6",
+   "id": "928ef78f",
    "metadata": {},
    "source": [
     "The group_id, unsurprisingly, groups orbitals. For example: if you create a two-level adatom, you need two orbitals that share the same group_id. In the same way, all orbitals in a graphene sheet share the same group_id."
@@ -72,13 +71,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2f988c38",
+   "id": "d69b4559",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T12:34:25.717344Z",
-     "iopub.status.busy": "2024-04-22T12:34:25.717006Z",
-     "iopub.status.idle": "2024-04-22T12:34:25.723803Z",
-     "shell.execute_reply": "2024-04-22T12:34:25.722677Z"
+     "iopub.execute_input": "2024-04-22T13:42:57.582589Z",
+     "iopub.status.busy": "2024-04-22T13:42:57.582266Z",
+     "iopub.status.idle": "2024-04-22T13:42:57.588074Z",
+     "shell.execute_reply": "2024-04-22T13:42:57.587568Z"
     }
    },
    "outputs": [
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ff9ca68",
+   "id": "17664730",
    "metadata": {},
    "source": [
     "This is all there is to know about orbitals!"
@@ -117,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07e5d7df",
+   "id": "6ce1e2dd",
    "metadata": {},
    "source": [
     "\n",
@@ -129,13 +128,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "05698fd1",
+   "id": "4fa33c6d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T12:34:25.728432Z",
-     "iopub.status.busy": "2024-04-22T12:34:25.727973Z",
-     "iopub.status.idle": "2024-04-22T12:34:25.732951Z",
-     "shell.execute_reply": "2024-04-22T12:34:25.732114Z"
+     "iopub.execute_input": "2024-04-22T13:42:57.590286Z",
+     "iopub.status.busy": "2024-04-22T13:42:57.589951Z",
+     "iopub.status.idle": "2024-04-22T13:42:57.594730Z",
+     "shell.execute_reply": "2024-04-22T13:42:57.594220Z"
     }
    },
    "outputs": [
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c844d589",
+   "id": "0da3291d",
    "metadata": {},
    "source": [
     "Let's pick a material and move on."
@@ -164,13 +163,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "da9ad5a9",
+   "id": "c1305c6e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T12:34:25.736763Z",
-     "iopub.status.busy": "2024-04-22T12:34:25.735682Z",
-     "iopub.status.idle": "2024-04-22T12:34:25.752975Z",
-     "shell.execute_reply": "2024-04-22T12:34:25.752118Z"
+     "iopub.execute_input": "2024-04-22T13:42:57.596798Z",
+     "iopub.status.busy": "2024-04-22T13:42:57.596585Z",
+     "iopub.status.idle": "2024-04-22T13:42:57.611098Z",
+     "shell.execute_reply": "2024-04-22T13:42:57.610470Z"
     }
    },
    "outputs": [],
@@ -180,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eac73e36",
+   "id": "19cf0e08",
    "metadata": {},
    "source": [
     "## OrbitalLists\n",
@@ -191,13 +190,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7cc2089b",
+   "id": "490d7a08",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T12:34:25.757004Z",
-     "iopub.status.busy": "2024-04-22T12:34:25.756072Z",
-     "iopub.status.idle": "2024-04-22T12:34:25.788601Z",
-     "shell.execute_reply": "2024-04-22T12:34:25.787496Z"
+     "iopub.execute_input": "2024-04-22T13:42:57.613306Z",
+     "iopub.status.busy": "2024-04-22T13:42:57.613109Z",
+     "iopub.status.idle": "2024-04-22T13:42:57.627943Z",
+     "shell.execute_reply": "2024-04-22T13:42:57.627294Z"
     }
    },
    "outputs": [
@@ -221,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3953ff68",
+   "id": "72e480f4",
    "metadata": {},
    "source": [
     "Alternatively, you get orbital lists if you cut a flake from a material. You do this by specifying the shape of the flake.\n",
@@ -232,13 +231,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6627d912",
+   "id": "765733ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T12:34:25.793083Z",
-     "iopub.status.busy": "2024-04-22T12:34:25.792394Z",
-     "iopub.status.idle": "2024-04-22T12:34:26.092032Z",
-     "shell.execute_reply": "2024-04-22T12:34:26.091190Z"
+     "iopub.execute_input": "2024-04-22T13:42:57.630060Z",
+     "iopub.status.busy": "2024-04-22T13:42:57.629860Z",
+     "iopub.status.idle": "2024-04-22T13:42:57.828807Z",
+     "shell.execute_reply": "2024-04-22T13:42:57.828246Z"
     }
    },
    "outputs": [],
@@ -250,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f44ee51",
+   "id": "03d9bb1d",
    "metadata": {},
    "source": [
     "Now, our shape is ready and we can start cutting. To make sure that we are satisfied with what we get, we plot the flake. By default, GRANAD cuts any \"dangling\" atoms."
@@ -259,13 +258,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b03dfb24",
+   "id": "99208826",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T12:34:26.096658Z",
-     "iopub.status.busy": "2024-04-22T12:34:26.096313Z",
-     "iopub.status.idle": "2024-04-22T12:34:31.585372Z",
-     "shell.execute_reply": "2024-04-22T12:34:31.573840Z"
+     "iopub.execute_input": "2024-04-22T13:42:57.831283Z",
+     "iopub.status.busy": "2024-04-22T13:42:57.830962Z",
+     "iopub.status.idle": "2024-04-22T13:43:00.963571Z",
+     "shell.execute_reply": "2024-04-22T13:43:00.963022Z"
     }
    },
    "outputs": [
@@ -296,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a4cfb88",
+   "id": "a337901c",
    "metadata": {},
    "source": [
     "For more information on cutting, including different edge types and how to keep dangling atoms, have a look at the corresponding tutorial."
@@ -304,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b95d8d5",
+   "id": "31c5b464",
    "metadata": {},
    "source": [
     "## A first simulation"
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f5d04e9",
+   "id": "6978ec9a",
    "metadata": {},
    "source": [
     "To get a feeling of the setup, we first inspect the energies of the flake"
@@ -321,13 +320,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "54929068",
+   "id": "e8275a22",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T12:34:31.596388Z",
-     "iopub.status.busy": "2024-04-22T12:34:31.591854Z",
-     "iopub.status.idle": "2024-04-22T12:34:35.503846Z",
-     "shell.execute_reply": "2024-04-22T12:34:35.503154Z"
+     "iopub.execute_input": "2024-04-22T13:43:00.965733Z",
+     "iopub.status.busy": "2024-04-22T13:43:00.965455Z",
+     "iopub.status.idle": "2024-04-22T13:43:03.233420Z",
+     "shell.execute_reply": "2024-04-22T13:43:03.232669Z"
     }
    },
    "outputs": [
@@ -348,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0461c402",
+   "id": "f268bf32",
    "metadata": {},
    "source": [
     "Let's say we want to compute the absorption spectrum of the flake. One way of doing this is based on integrating a modified von-Neumann equation in time-domain. You can do this in two steps: \n",
@@ -359,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bd9c52f",
+   "id": "325e1438",
    "metadata": {},
    "source": [
     "We first do step 1. To make sure that we get a meaningful spectrum, we must pick an electric field with many frequencies, i.e. a narrow pulse in time-domain"
@@ -368,13 +367,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f0568122",
+   "id": "c7d894c0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T12:34:35.506445Z",
-     "iopub.status.busy": "2024-04-22T12:34:35.506223Z",
-     "iopub.status.idle": "2024-04-22T12:34:35.561855Z",
-     "shell.execute_reply": "2024-04-22T12:34:35.561146Z"
+     "iopub.execute_input": "2024-04-22T13:43:03.235519Z",
+     "iopub.status.busy": "2024-04-22T13:43:03.235319Z",
+     "iopub.status.idle": "2024-04-22T13:43:03.282525Z",
+     "shell.execute_reply": "2024-04-22T13:43:03.281857Z"
     }
    },
    "outputs": [],
@@ -388,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "539d513a",
+   "id": "a219e8ba",
    "metadata": {},
    "source": [
     "For step 2, we have to think of a few parameters:\n",
@@ -401,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5a5498a",
+   "id": "980a312e",
    "metadata": {},
    "source": [
     "A simulation is just passing all of these parameters to the corresponding method of our flake."
@@ -410,13 +409,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e734f3bd",
+   "id": "ef5783f0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T12:34:35.565087Z",
-     "iopub.status.busy": "2024-04-22T12:34:35.564418Z",
-     "iopub.status.idle": "2024-04-22T12:34:39.471506Z",
-     "shell.execute_reply": "2024-04-22T12:34:39.470310Z"
+     "iopub.execute_input": "2024-04-22T13:43:03.284779Z",
+     "iopub.status.busy": "2024-04-22T13:43:03.284571Z",
+     "iopub.status.idle": "2024-04-22T13:43:06.019671Z",
+     "shell.execute_reply": "2024-04-22T13:43:06.019121Z"
     }
    },
    "outputs": [
@@ -446,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86bf22ff",
+   "id": "5d971d90",
    "metadata": {},
    "source": [
     "We see that three variables are returned: the omega axis we have specified, the dipole moment and the pulse in freqeuency domain. There is no way to control the number of points in the omega axis, because\n",
@@ -455,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce24b274",
+   "id": "1041fe56",
    "metadata": {},
    "source": [
     "We now plot the dipole moment and the pulse in frequency domain."
@@ -464,13 +463,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ae180c2c",
+   "id": "3e8beade",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T12:34:39.476057Z",
-     "iopub.status.busy": "2024-04-22T12:34:39.475678Z",
-     "iopub.status.idle": "2024-04-22T12:34:40.219084Z",
-     "shell.execute_reply": "2024-04-22T12:34:40.218089Z"
+     "iopub.execute_input": "2024-04-22T13:43:06.021884Z",
+     "iopub.status.busy": "2024-04-22T13:43:06.021663Z",
+     "iopub.status.idle": "2024-04-22T13:43:06.763799Z",
+     "shell.execute_reply": "2024-04-22T13:43:06.763099Z"
     }
    },
    "outputs": [
@@ -487,9 +486,9 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x6d0d8c8e9d00>,\n",
-       " <matplotlib.lines.Line2D at 0x6d0d8c8e9e20>,\n",
-       " <matplotlib.lines.Line2D at 0x6d0d8c8e9e80>]"
+       "[<matplotlib.lines.Line2D at 0x68ff4f943100>,\n",
+       " <matplotlib.lines.Line2D at 0x68ff4f943220>,\n",
+       " <matplotlib.lines.Line2D at 0x68ff4f943280>]"
       ]
      },
      "execution_count": 11,
