FIX: reformatting, temporarily suppressed diffrax warning

--- a/docs/tutorials/getting_started.ipynb
+++ b/docs/tutorials/getting_started.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8a73f4a0",
+   "id": "9a0667bb",
    "metadata": {},
    "source": [
     "## Getting started\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e851d260",
+   "id": "44138de3",
    "metadata": {},
    "source": [
     "\n",
@@ -24,13 +24,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "13e4ce13",
+   "id": "039f5248",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:42:56.427935Z",
-     "iopub.status.busy": "2024-04-22T13:42:56.427322Z",
-     "iopub.status.idle": "2024-04-22T13:42:57.580323Z",
-     "shell.execute_reply": "2024-04-22T13:42:57.579674Z"
+     "iopub.execute_input": "2024-04-22T13:52:13.552790Z",
+     "iopub.status.busy": "2024-04-22T13:52:13.551897Z",
+     "iopub.status.idle": "2024-04-22T13:52:14.813382Z",
+     "shell.execute_reply": "2024-04-22T13:52:14.812648Z"
     }
    },
    "outputs": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "928ef78f",
+   "id": "7c08f091",
    "metadata": {},
    "source": [
     "The group_id, unsurprisingly, groups orbitals. For example: if you create a two-level adatom, you need two orbitals that share the same group_id. In the same way, all orbitals in a graphene sheet share the same group_id."
@@ -71,13 +71,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d69b4559",
+   "id": "a329177d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:42:57.582589Z",
-     "iopub.status.busy": "2024-04-22T13:42:57.582266Z",
-     "iopub.status.idle": "2024-04-22T13:42:57.588074Z",
-     "shell.execute_reply": "2024-04-22T13:42:57.587568Z"
+     "iopub.execute_input": "2024-04-22T13:52:14.815633Z",
+     "iopub.status.busy": "2024-04-22T13:52:14.815364Z",
+     "iopub.status.idle": "2024-04-22T13:52:14.820535Z",
+     "shell.execute_reply": "2024-04-22T13:52:14.819908Z"
     }
    },
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17664730",
+   "id": "d4e8a30f",
    "metadata": {},
    "source": [
     "This is all there is to know about orbitals!"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce1e2dd",
+   "id": "dd8dee52",
    "metadata": {},
    "source": [
     "\n",
@@ -128,13 +128,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4fa33c6d",
+   "id": "24f54ff8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:42:57.590286Z",
-     "iopub.status.busy": "2024-04-22T13:42:57.589951Z",
-     "iopub.status.idle": "2024-04-22T13:42:57.594730Z",
-     "shell.execute_reply": "2024-04-22T13:42:57.594220Z"
+     "iopub.execute_input": "2024-04-22T13:52:14.822723Z",
+     "iopub.status.busy": "2024-04-22T13:52:14.822524Z",
+     "iopub.status.idle": "2024-04-22T13:52:14.826142Z",
+     "shell.execute_reply": "2024-04-22T13:52:14.825645Z"
     }
    },
    "outputs": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0da3291d",
+   "id": "3be7ee94",
    "metadata": {},
    "source": [
     "Let's pick a material and move on."
@@ -163,13 +163,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c1305c6e",
+   "id": "863c4d07",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:42:57.596798Z",
-     "iopub.status.busy": "2024-04-22T13:42:57.596585Z",
-     "iopub.status.idle": "2024-04-22T13:42:57.611098Z",
-     "shell.execute_reply": "2024-04-22T13:42:57.610470Z"
+     "iopub.execute_input": "2024-04-22T13:52:14.828357Z",
+     "iopub.status.busy": "2024-04-22T13:52:14.828146Z",
+     "iopub.status.idle": "2024-04-22T13:52:14.844058Z",
+     "shell.execute_reply": "2024-04-22T13:52:14.843376Z"
     }
    },
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19cf0e08",
+   "id": "0fdc9e34",
    "metadata": {},
    "source": [
     "## OrbitalLists\n",
@@ -190,13 +190,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "490d7a08",
+   "id": "b1b9851e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:42:57.613306Z",
-     "iopub.status.busy": "2024-04-22T13:42:57.613109Z",
-     "iopub.status.idle": "2024-04-22T13:42:57.627943Z",
-     "shell.execute_reply": "2024-04-22T13:42:57.627294Z"
+     "iopub.execute_input": "2024-04-22T13:52:14.846560Z",
+     "iopub.status.busy": "2024-04-22T13:52:14.846319Z",
+     "iopub.status.idle": "2024-04-22T13:52:14.860846Z",
+     "shell.execute_reply": "2024-04-22T13:52:14.860167Z"
     }
    },
    "outputs": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72e480f4",
+   "id": "c02e2aaf",
    "metadata": {},
    "source": [
     "Alternatively, you get orbital lists if you cut a flake from a material. You do this by specifying the shape of the flake.\n",
@@ -231,13 +231,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "765733ed",
+   "id": "d0f5388c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:42:57.630060Z",
-     "iopub.status.busy": "2024-04-22T13:42:57.629860Z",
-     "iopub.status.idle": "2024-04-22T13:42:57.828807Z",
-     "shell.execute_reply": "2024-04-22T13:42:57.828246Z"
+     "iopub.execute_input": "2024-04-22T13:52:14.863077Z",
+     "iopub.status.busy": "2024-04-22T13:52:14.862821Z",
+     "iopub.status.idle": "2024-04-22T13:52:15.053250Z",
+     "shell.execute_reply": "2024-04-22T13:52:15.052507Z"
     }
    },
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03d9bb1d",
+   "id": "038079e8",
    "metadata": {},
    "source": [
     "Now, our shape is ready and we can start cutting. To make sure that we are satisfied with what we get, we plot the flake. By default, GRANAD cuts any \"dangling\" atoms."
@@ -258,13 +258,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "99208826",
+   "id": "b6b6d265",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:42:57.831283Z",
-     "iopub.status.busy": "2024-04-22T13:42:57.830962Z",
-     "iopub.status.idle": "2024-04-22T13:43:00.963571Z",
-     "shell.execute_reply": "2024-04-22T13:43:00.963022Z"
+     "iopub.execute_input": "2024-04-22T13:52:15.055436Z",
+     "iopub.status.busy": "2024-04-22T13:52:15.055179Z",
+     "iopub.status.idle": "2024-04-22T13:52:18.116875Z",
+     "shell.execute_reply": "2024-04-22T13:52:18.116246Z"
     }
    },
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a337901c",
+   "id": "04410e79",
    "metadata": {},
    "source": [
     "For more information on cutting, including different edge types and how to keep dangling atoms, have a look at the corresponding tutorial."
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31c5b464",
+   "id": "ec810761",
    "metadata": {},
    "source": [
     "## A first simulation"
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6978ec9a",
+   "id": "e2907eaf",
    "metadata": {},
    "source": [
     "To get a feeling of the setup, we first inspect the energies of the flake"
@@ -320,13 +320,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e8275a22",
+   "id": "3525da42",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:43:00.965733Z",
-     "iopub.status.busy": "2024-04-22T13:43:00.965455Z",
-     "iopub.status.idle": "2024-04-22T13:43:03.233420Z",
-     "shell.execute_reply": "2024-04-22T13:43:03.232669Z"
+     "iopub.execute_input": "2024-04-22T13:52:18.118935Z",
+     "iopub.status.busy": "2024-04-22T13:52:18.118737Z",
+     "iopub.status.idle": "2024-04-22T13:52:20.311931Z",
+     "shell.execute_reply": "2024-04-22T13:52:20.311131Z"
     }
    },
    "outputs": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f268bf32",
+   "id": "25f0adcd",
    "metadata": {},
    "source": [
     "Let's say we want to compute the absorption spectrum of the flake. One way of doing this is based on integrating a modified von-Neumann equation in time-domain. You can do this in two steps: \n",
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "325e1438",
+   "id": "dfd86fc8",
    "metadata": {},
    "source": [
     "We first do step 1. To make sure that we get a meaningful spectrum, we must pick an electric field with many frequencies, i.e. a narrow pulse in time-domain"
@@ -367,13 +367,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c7d894c0",
+   "id": "6c538c9f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:43:03.235519Z",
-     "iopub.status.busy": "2024-04-22T13:43:03.235319Z",
-     "iopub.status.idle": "2024-04-22T13:43:03.282525Z",
-     "shell.execute_reply": "2024-04-22T13:43:03.281857Z"
+     "iopub.execute_input": "2024-04-22T13:52:20.314219Z",
+     "iopub.status.busy": "2024-04-22T13:52:20.314023Z",
+     "iopub.status.idle": "2024-04-22T13:52:20.361012Z",
+     "shell.execute_reply": "2024-04-22T13:52:20.360468Z"
     }
    },
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a219e8ba",
+   "id": "f54626a9",
    "metadata": {},
    "source": [
     "For step 2, we have to think of a few parameters:\n",
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "980a312e",
+   "id": "22cd7a67",
    "metadata": {},
    "source": [
     "A simulation is just passing all of these parameters to the corresponding method of our flake."
@@ -409,25 +409,16 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ef5783f0",
+   "id": "f9c59664",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:43:03.284779Z",
-     "iopub.status.busy": "2024-04-22T13:43:03.284571Z",
-     "iopub.status.idle": "2024-04-22T13:43:06.019671Z",
-     "shell.execute_reply": "2024-04-22T13:43:06.019121Z"
+     "iopub.execute_input": "2024-04-22T13:52:20.363254Z",
+     "iopub.status.busy": "2024-04-22T13:52:20.363041Z",
+     "iopub.status.idle": "2024-04-22T13:52:22.784127Z",
+     "shell.execute_reply": "2024-04-22T13:52:22.783408Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/david/miniconda3/lib/python3.9/site-packages/equinox/_jit.py:49: UserWarning: Complex dtype support is work in progress, please read https://github.com/patrick-kidger/diffrax/pull/197 and proceed carefully.\n",
-      "  out = fun(*args, **kwargs)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "omegas, dipole_omega, pulse_omega = (\n",
     "    my_first_flake.get_expectation_value_frequency_domain(\n",
@@ -445,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d971d90",
+   "id": "1b3edb3e",
    "metadata": {},
    "source": [
     "We see that three variables are returned: the omega axis we have specified, the dipole moment and the pulse in freqeuency domain. There is no way to control the number of points in the omega axis, because\n",
@@ -454,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1041fe56",
+   "id": "a78a7492",
    "metadata": {},
    "source": [
     "We now plot the dipole moment and the pulse in frequency domain."
@@ -463,32 +454,22 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3e8beade",
+   "id": "369bae01",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:43:06.021884Z",
-     "iopub.status.busy": "2024-04-22T13:43:06.021663Z",
-     "iopub.status.idle": "2024-04-22T13:43:06.763799Z",
-     "shell.execute_reply": "2024-04-22T13:43:06.763099Z"
+     "iopub.execute_input": "2024-04-22T13:52:22.786608Z",
+     "iopub.status.busy": "2024-04-22T13:52:22.786380Z",
+     "iopub.status.idle": "2024-04-22T13:52:23.419186Z",
+     "shell.execute_reply": "2024-04-22T13:52:23.418455Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/david/.local/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1289: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  return np.asarray(x, float)\n",
-      "/home/david/.local/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1289: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  return np.asarray(x, float)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x68ff4f943100>,\n",
-       " <matplotlib.lines.Line2D at 0x68ff4f943220>,\n",
-       " <matplotlib.lines.Line2D at 0x68ff4f943280>]"
+       "[<matplotlib.lines.Line2D at 0x6d4594d589d0>,\n",
+       " <matplotlib.lines.Line2D at 0x6d4594d58af0>,\n",
+       " <matplotlib.lines.Line2D at 0x6d4594d58b50>]"
       ]
      },
      "execution_count": 11,
