--- a/tutorials/rabi_oscillations_in_tls.ipynb
+++ b/tutorials/rabi_oscillations_in_tls.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "09bb67f1",
+   "id": "57d70cdd",
    "metadata": {},
    "source": [
     "## Rabi Oscillations in TLS\n",
     "\n",
-    "We study Rabi oscillations. First, in a single TLS. Then, we add this TLS to a graphene flake.\n",
+    "We study Rabi oscillations in isolated two-level system.\n",
     "\n",
     "NOTE: this tutorial makes heavy use of the liberal way GRANAD lets you group orbitals. You might want to consult the tutorial on orbital lists first."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2012a404",
+   "id": "b56e3682",
    "metadata": {},
    "source": [
     "## Building a two-level system\n",
@@ -25,13 +25,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f106bb88",
+   "id": "8fd8da5d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:51:34.486272Z",
-     "iopub.status.busy": "2024-04-22T13:51:34.485745Z",
-     "iopub.status.idle": "2024-04-22T13:51:36.468833Z",
-     "shell.execute_reply": "2024-04-22T13:51:36.467872Z"
+     "iopub.execute_input": "2024-04-22T15:15:03.116357Z",
+     "iopub.status.busy": "2024-04-22T15:15:03.115661Z",
+     "iopub.status.idle": "2024-04-22T15:15:04.312534Z",
+     "shell.execute_reply": "2024-04-22T15:15:04.311810Z"
     }
    },
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7115d152",
+   "id": "d3e3d54f",
    "metadata": {},
    "source": [
     "We have used a tag to signify that these the orbitals belong to the same atom. Let's see what we have done."
@@ -54,13 +54,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d5cb3b0b",
+   "id": "0fe3c775",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:51:36.473555Z",
-     "iopub.status.busy": "2024-04-22T13:51:36.472820Z",
-     "iopub.status.idle": "2024-04-22T13:51:36.480317Z",
-     "shell.execute_reply": "2024-04-22T13:51:36.479305Z"
+     "iopub.execute_input": "2024-04-22T15:15:04.314817Z",
+     "iopub.status.busy": "2024-04-22T15:15:04.314571Z",
+     "iopub.status.idle": "2024-04-22T15:15:04.318555Z",
+     "shell.execute_reply": "2024-04-22T15:15:04.317992Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08308e65",
+   "id": "f3806300",
    "metadata": {},
    "source": [
     "We see that GRANAD assumes that every orbital is filled. But we want only the one of the levels filled. So, we set the electron number to 1."
@@ -90,13 +90,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c81a402e",
+   "id": "a0e6d507",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:51:36.484321Z",
-     "iopub.status.busy": "2024-04-22T13:51:36.483848Z",
-     "iopub.status.idle": "2024-04-22T13:51:36.490877Z",
-     "shell.execute_reply": "2024-04-22T13:51:36.489250Z"
+     "iopub.execute_input": "2024-04-22T15:15:04.320640Z",
+     "iopub.status.busy": "2024-04-22T15:15:04.320403Z",
+     "iopub.status.idle": "2024-04-22T15:15:04.324714Z",
+     "shell.execute_reply": "2024-04-22T15:15:04.324173Z"
     }
    },
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ac85a9d",
+   "id": "588b55a5",
    "metadata": {},
    "source": [
     "We now need to specify the Hamiltonian. We can do so by setting the elements corresponding to the orbitals."
@@ -127,13 +127,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9ddd8c0a",
+   "id": "34fc618e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:51:36.495679Z",
-     "iopub.status.busy": "2024-04-22T13:51:36.495321Z",
-     "iopub.status.idle": "2024-04-22T13:51:38.367219Z",
-     "shell.execute_reply": "2024-04-22T13:51:38.365325Z"
+     "iopub.execute_input": "2024-04-22T15:15:04.326853Z",
+     "iopub.status.busy": "2024-04-22T15:15:04.326601Z",
+     "iopub.status.idle": "2024-04-22T15:15:05.478959Z",
+     "shell.execute_reply": "2024-04-22T15:15:05.478345Z"
     }
    },
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c132467a",
+   "id": "438b28a0",
    "metadata": {},
    "source": [
     "Setting dipole transitions is similar. We want the lower and upper level to be connected by a dipole transition in z-direction."
@@ -175,13 +175,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b0eb9f32",
+   "id": "2e790e26",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:51:38.371727Z",
-     "iopub.status.busy": "2024-04-22T13:51:38.371153Z",
-     "iopub.status.idle": "2024-04-22T13:51:38.401995Z",
-     "shell.execute_reply": "2024-04-22T13:51:38.400971Z"
+     "iopub.execute_input": "2024-04-22T15:15:05.480843Z",
+     "iopub.status.busy": "2024-04-22T15:15:05.480661Z",
+     "iopub.status.idle": "2024-04-22T15:15:05.496239Z",
+     "shell.execute_reply": "2024-04-22T15:15:05.495628Z"
     }
    },
    "outputs": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52ab1622",
+   "id": "fe2c092b",
    "metadata": {},
    "source": [
     "We set the initial excited state (in our point of view, this is a HOMO-LUMO transition)."
@@ -212,13 +212,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "47911518",
+   "id": "1cb70cdd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:51:38.405882Z",
-     "iopub.status.busy": "2024-04-22T13:51:38.405287Z",
-     "iopub.status.idle": "2024-04-22T13:51:39.106137Z",
-     "shell.execute_reply": "2024-04-22T13:51:39.105172Z"
+     "iopub.execute_input": "2024-04-22T15:15:05.498266Z",
+     "iopub.status.busy": "2024-04-22T15:15:05.498080Z",
+     "iopub.status.idle": "2024-04-22T15:15:05.984645Z",
+     "shell.execute_reply": "2024-04-22T15:15:05.984030Z"
     }
    },
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd0ce8a8",
+   "id": "d8f93904",
    "metadata": {},
    "source": [
     "We consider a continuous wave as an external illumination."
@@ -249,13 +249,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6e449a2b",
+   "id": "e9f43606",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:51:39.110477Z",
-     "iopub.status.busy": "2024-04-22T13:51:39.109766Z",
-     "iopub.status.idle": "2024-04-22T13:51:39.135106Z",
-     "shell.execute_reply": "2024-04-22T13:51:39.133702Z"
+     "iopub.execute_input": "2024-04-22T15:15:05.986717Z",
+     "iopub.status.busy": "2024-04-22T15:15:05.986518Z",
+     "iopub.status.idle": "2024-04-22T15:15:05.999617Z",
+     "shell.execute_reply": "2024-04-22T15:15:05.998948Z"
     }
    },
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "668521f3",
+   "id": "c700e99f",
    "metadata": {},
    "source": [
     "We propagate the system in time."
@@ -276,13 +276,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7f8ab71a",
+   "id": "d89d77a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-22T13:51:39.139673Z",
-     "iopub.status.busy": "2024-04-22T13:51:39.139152Z",
-     "iopub.status.idle": "2024-04-22T13:51:42.241365Z",
-     "shell.execute_reply": "2024-04-22T13:51:42.240608Z"
+     "iopub.execute_input": "2024-04-22T15:15:06.001889Z",
+     "iopub.status.busy": "2024-04-22T15:15:06.001693Z",
+     "iopub.status.idle": "2024-04-22T15:15:08.729777Z",
+     "shell.execute_reply": "2024-04-22T15:15:08.729051Z"
     }
    },
    "outputs": [
